# VeriSim

./: .gitignore  build_and_run.sh  explanation
.devcontainer/: Dockerfile  Dockerfile.base  devcontainer.json  docker-compose.yaml
Jupiter/: CMakeLists.txt  design.md
Jupiter/hardware/: top.v
Jupiter/include/board/: boardState.hpp
Jupiter/include/files/: fileInput.hpp  fileOutput.hpp
Jupiter/include/module/: module.hpp
Jupiter/include/sim/: sim.hpp
Jupiter/include/states/: boardState.hpp
Jupiter/include/ui/: ui.hpp
Jupiter/info/: convensions.md
Jupiter/lib/: dataHelper.hpp  logHelper.hpp
Jupiter/src/: main.cpp
Jupiter/src/files/: fileInput.cpp  fileOutput.cpp
Jupiter/src/module/: module.cpp
Jupiter/src/sim/: sim.cpp
Jupiter/src/ui/: ui.cpp
Verisim/: CMakeLists.txt
Verisim/include/: verisim.hpp  verisimFilesIO.hpp  verisimModuleInputs.hpp  verisimModuleOutputs.hpp
Verisim/lib/: verisimDisplay.hpp  verisimHelper.hpp
Verisim/src/: main.cpp  verisim.cpp  verisimFilesIO.cpp  verisimModuleInputs.cpp  verisimModuleOutputs.cpp
Verisim/verilog/: verisim.v
